# trofi.github.io.gen

./: .gitignore  README.md  flake.nix  index.html  push_site.sh  run_watcher.sh  trofi.github.io.gen.cabal
css/: code.css  default.css  highlighting-kate.css  skylighting.css
pages/: about.md  contact.md  index.md  log.md
posts/: 111-ghc-llvm-report.markdown  111-ghc-llvm-report.md  116-new-gentoo-dev.markdown  116-new-gentoo-dev.md  117-gentoo-haskell-progress-for-two-weeks.markdown  117-gentoo-haskell-progress-for-two-weeks.md  118-ghci-report.markdown  119-fhash-u-boot-to-sheevaplug.markdown  119-flash-u-boot-to-sheevaplug.md  122-glibc-on-sparc.markdown  122-glibc-on-sparc.md  123-haskell-let-list-expression.markdown  123-haskell-let-list-expression.md  124-clang++-features.markdown  124-clang++-features.md  125-memcheck-the-debugger.markdown  125-memcheck-the-debugger.md  126-clang++-bug.markdown  126-clang++-bug.md  127-paludis-and-crosscompilers.markdown  127-paludis-and-crosscompilers.md  128-trip-to-zurich.md  129-rst-for-home-page.markdown  129-rst-for-home-page.md  130-c-and-small-ints.markdown  130-c-and-small-ints.md  134-gentoo-prefix.md  134-gentoo-prefix.rst  136-a-look-at-btrfs.md  136-a-look-at-btrfs.rst  138-memcpy-strikes-again.md  138-memcpy-strikes-again.rst  139-gentoo-default-openssl-certs.md  139-gentoo-default-openssl-certs.rst  140-new-xmms2-bell.md  140-new-xmms2-bell.rst  141-ghc-7.0.4-is-unmasked.md  141-ghc-7.0.4-is-unmasked.rst  142-claws-mail-filter-magic.md  142-claws-mail-filter-magic.rst  (+290 more)
posts.data/234-seekwatcher/: scrub.ogv
posts.data/248-shlib-clash/: fig-1.dot  fig-10.dot  fig-11.dot  fig-12.dot  fig-2.dot  fig-3.dot  fig-4-mk.bash  fig-4.dot  fig-5-mk.bash  fig-5.dot  fig-6.dot  fig-7.dot  fig-8.dot  fig-9.dot
posts.data/250-sh-copy-reloc/: fig-1.dot  fig-2.dot  fig-3.dot  fig-4.dot
posts.data/267-diving-into-an-ipa-gcc-bug/: example-1.dot  example-2.dot  fig-1.dot  fig-2.dot  fig-3.dot
posts.data/269-a-dataflow-gcc-bug/: b.c.015t.cfg.dot  b.c.128t.sra.dot  b.c.130t.dom2.dot  b.c.254t.optimized.dot
posts.data/321-seekwatcher/: scrub.mpeg
src/: AbsolutizeUrls.hs  Gnuplot.hs  Graphviz.hs  PandocWithInlines.hs  site.hs
static/: README.md
templates/: archive.html  blog.html  default.html  post.html
(+2085 files in other folders)
