name:                mksite
version:             0.0.0.0
synopsis:            static site generator
homepage:            https://github.com/trofi/trofi.github.io.gen
license:             PublicDomain
author:              Sergei Trofimovich
maintainer:          slyich@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable trofi.github.io.gen
    main-is:             site.hs
    other-modules:       AbsolutizeUrls
    build-depends:       base, pandoc, hakyll
    hs-source-dirs:      src
    default-language:    Haskell2010
